@@ -4,6 +4,7 @@ X-editable changelog
 
 Version 1.4.4 wip
 ----------------------------
+[enh] update to combodate 1.0.3 with yearDescending and roundTime options (vitalets)
 [enh] add 'use strict' directive (vitalets)
 [enh #202] allow pk=0 (mdeweerd)
 [enh #183] move datepicker icon to center of button (vitalets)
